Minify files of css and js

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <img src="imgs/logo.jpg" alt="Zad logo" >
             </a>
             <button class="navbar-toggler border-0" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                 aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fa-solid fa-bars-staggered fa-xl"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbar">
@@ -53,11 +53,11 @@
                     </li>
                 </ul>
                 <!-- button from ui verser website -->
-                <button class="learn-more align-self-center" role="button">
+                <button class="learn-more align-self-center" >
                     <span class="circle" aria-hidden="true">
                         <span class="icon arrow"></span>
                     </span>
-                    <a class="button-text" href="#contact">Contact us</a>
+                    <a class="button-text" href="#contact" role="button">Contact us</a>
                 </button>
             </div>
         </div>
@@ -84,7 +84,7 @@
                         <img src="imgs/shower3.jpeg" alt="shoewer gel">
                     </figure>
                 </article>
-                <div class="col-md-4 imgs d-flex justify-content-center " class="">
+                <div class="col-md-4 imgs d-flex justify-content-center " >
                     <img src="imgs/zadc.png" class="" alt="curlyserum">
                 </div>
             </div>
