--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body data-bs-spy="scroll" data-bs-target="#navbar" class="position-relative">
     <!-- butoon scrool up -->
-    <a class="scroll-up d-flex justify-content-center z-3  align-items-center-3 border p-2 position-fixed end-0 bottom-0 me-1  me-md-4 mb-4  rounded-circle" href="#"
+    <a class="scroll-up d-flex justify-content-center z-3  align-items-center  border  position-fixed end-0 bottom-0 me-1  me-md-4 mb-4  rounded-circle" href="#"
         role="button">^</a>
     <!-- start header section -->
     <nav class="navbar navbar-expand-lg py-3 fixed-top">
